--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ before_install:
   - docker build -t ajochope/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run ajochope/docker-react npm run test -- --coverage
+  - docker run -e CI=true ajochope/docker-react npm run test -- --coverage
 
   
