--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 workflows:
   build_deploy:
     jobs:
-      - build
+      - build:
           filters:
             branches:
               only: master
