--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,15 @@
-version: 2.1
-workflows:
-  build_deploy:
-    jobs:
-      - build_test:
-          filters:
-            branches:
-              only: master
-      - deploy:
-          requires:
-            - build_test
+version: 2
 jobs:
-  build_test:
+  build:
+    working_directory: ~/app
     docker:
       - image: circleci/buildpack-deps:stretch
         environment:
           IMAGE_NAME: ajochope/docker-react
     steps:
       - add_ssh_keys:
-          fingerprints:
-            - "19:af:41:7c:63:b6:22:d8:74:ee:eb:71:bd:ef:9a:cf"
+        fingerprints:
+          - "19:af:41:7c:63:b6:22:d8:74:ee:eb:71:bd:ef:9a:cf"
       - checkout
       - setup_remote_docker
       - run:
@@ -37,10 +28,23 @@ jobs:
 #          name: Run Test and Coverage
 #          command: |
 #            docker run -e CI=true $IMAGE_NAME:$CIRCLE_SHA1 npm run test -- --coverage
-  deploy:
+  test:
     machine: true
+    working_directory: ~/app
     steps:
       - run:
           name: Script inside Droplet
           command: |
             ssh -v -o StrictHostKeyChecking=no root@ajochope.tk "/bin/bash /root/docker/deploy.sh $CIRCLE_SHA1"
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
