--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,11 @@ jobs:
           name: Push Docker image
           command: |
             docker push $IMAGE_NAME:$CIRCLE_SHA1
-      - run:
-          name: Run Test and Coverage
-          command: |
-            docker run $IMAGE_NAME:$CIRCLE_SHA1 npm run test -- --coverage
+# Test only in developer branch
+#      - run:
+#          name: Run Test and Coverage
+#          command: |
+#            docker run -e CI=true $IMAGE_NAME:$CIRCLE_SHA1 npm run test -- --coverage
   test:
     machine: true
     working_directory: ~/app
@@ -48,3 +49,4 @@ workflows:
       - test:
           requires:
             - build
+            
