--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ sudo: required
 services:
 - docker
 before_install:
-- openssl aes-256-cbc -K $encrypted_a37ce85f771b_key -iv $encrypted_a37ce85f771b_iv
-  -in client-secret.json.enc -out client-secret.json -d
+- openssl aes-256-cbc -K $encrypted_a37ce85f771b_key -iv $encrypted_a37ce85f771b_iv -in credentials.tar.gz.enc -out credentials.tar.gz -d
 - docker build -t ajochope/docker-react -f Dockerfile.dev .
 script:
 - docker run -e CI=true ajochope/docker-react npm run test -- --coverage
@@ -16,4 +15,3 @@ deploy:
   access_key_id: $encrypted_a37ce85f771b_iv
   secret_access_key:
     secure: $encrypted_a37ce85f771b_key
-    
